fix(unredPill): fixed the unread pill (overlapping text)

--- a/dark.mode.css
+++ b/dark.mode.css
@@ -899,7 +899,7 @@ span:not(.spinner-item) {
 }
 
 /*custom unread style*/
-.unreadPillCap__96b8d {
+.unreadPillCap__44e20 {
   display: none;
   right: 50%;
 }
@@ -1081,7 +1081,7 @@ span:not(.spinner-item) {
 
 
 /*remove unread with date*/ /*it causes issue with the theme*/
-.hasContent__8519e {
+.content__7191e {
   display: none;
 }
 /*glow radial status*/
